--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- Slider voor hoeveelheid deeg -->
         <label for="deegHoeveelheid">Hoeveelheid deeg (gram):</label>
-        <input type="range" id="deegHoeveelheid" min="1250" max="4500" value="1250">
+        <input type="range" id="deegHoeveelheid" min="1250" max="4500" value="1250" step="100">
         <span id="deegWaarde">1250g</span>
 
         <!-- Resultaten van de berekeningen -->
