--- a/index.html
+++ b/index.html
@@ -4,34 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brood Recepten Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Materialize CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f7f7f7;
+            padding: 20px;
+        }
+
+        .card-content {
+            padding: 20px;
+        }
+
+        .card {
+            box-shadow: none;
+            margin-bottom: 30px;
+        }
+
+        .section {
+            margin-bottom: 40px;
+        }
+
+        .input-field {
+            margin-bottom: 30px;
+        }
+
+        .center-align {
+            text-align: center;
+        }
+
+        h1 {
+            margin-bottom: 40px;
+        }
+
+        .output-section {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .output-section h3 {
+            margin-bottom: 20px;
+        }
+
+        .output-section ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        .output-section li {
+            padding: 8px 0;
+        }
+    </style>
 </head>
 <body>
+    <!-- Main content -->
     <div class="container">
-        <h1>Brood Recepten Calculator</h1>
 
-        <!-- Dropdown voor broodtype -->
-        <label for="broodType">Kies het type brood:</label>
-        <select id="broodType">
-            <option value="Wit">Wit</option>
-            <option value="Rogge">Rogge</option>
-            <!-- Voeg hier andere broodtypes toe -->
-        </select>
+        <h1 class="center-align">Brood Recepten Calculator</h1>
 
-        <!-- Slider voor hoeveelheid deeg -->
-        <label for="deegHoeveelheid">Hoeveelheid deeg (gram):</label>
-        <input type="range" id="deegHoeveelheid" min="1250" max="4500" value="1250" step="100">
-        <span id="deegWaarde">1250g</span>
+        <!-- Input Section -->
+        <div class="section">
+            <div class="card">
+                <div class="card-content">
+                    <h5>Invoer</h5>
 
-        <!-- Resultaten van de berekeningen -->
-        <h3>Ingrediënten:</h3>
-        <ul id="ingredientenLijst"></ul>
+                    <!-- Dropdown voor broodtype -->
+                    <div class="input-field">
+                        <select id="broodType" class="browser-default">
+                            <option value="Wit">Wit</option>
+                            <option value="Rogge">Rogge</option>
+                            <!-- Voeg hier andere broodtypes toe -->
+                        </select>
+                        <label for="broodType">Kies het type brood:</label>
+                    </div>
 
-        <h3>Starter:</h3>
-        <p id="starter1x"></p>
-        <p id="starter2x"></p>
+                    <!-- Slider voor hoeveelheid deeg -->
+                    <div class="input-field">
+                        <label for="deegHoeveelheid">Hoeveelheid deeg (gram):</label>
+                        <input type="range" id="deegHoeveelheid" min="1250" max="4500" value="1250" step="100" />
+                        <span id="deegWaarde">1250g</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Output Section -->
+        <div class="output-section">
+            <h3>Ingrediënten:</h3>
+            <ul id="ingredientenLijst"></ul>
+
+            <h3>Starter:</h3>
+            <p id="starter1x"></p>
+            <p id="starter2x"></p>
+        </div>
+
     </div>
 
+    <!-- Materialize JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
